--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,18 +9,34 @@
     <link rel = "stylesheet" href = "./jQueryUI-1.13.2/jquery-ui.structure.min.css">
     <link rel = "stylesheet" href = "./jQueryUI-1.13.2/jquery-ui.theme.min.css">
     <script src="./jQueryUI-1.13.2/jquery-ui.min.js"></script>
+    <style>
+        textarea{
+            width: 80%;
+            position: relative;
+            border: 5px solid #007fff;
+            padding: 10px 20px 10px 20px;
+            margin: 10px 20px 10px 20px;
+            text-align: left;
+            vertical-align: top;
+            font-size: 36px;
+            font-family: '隶书';
+        }
+    </style>
 </head>
 <body>
 <div id="root" style="height: 100%;width: 100%;top: 0;left: 0;position: fixed" class="initial">
-    <div id="header" style="height: 6%;width: 100%;position: fixed" class="initial">
-        <input type="text" id="name" readonly value="游客">
-        <input type="button" class="ui-button" id="login" value="登录">
+    <div id="header" style="height: 6%;width: 99.6%;top: 0.2%;right: 0.2%;position: fixed" class="initial">
+        <input type="text" style="float: left;font-size: 36px" id="name" readonly value="游客">
+        <input type="button" class="ui-button" style="float: right;font-size: 36px" id="login" value="登录">
     </div>
-    <div id="content" style="height: 80%;width: 100%;top: 10%;position: relative;overflow-y: scroll" class="initial">
-        <div style="position: relative;text-align: center;vertical-align: center;height: 100%;width: 100%">
-            <div style="position: relative;text-align: center;vertical-align: center;height: 100%;width: 100%">
+    <div id="content" style="height: 89.2%;width: 99.6%;right: 0.2%;top: 6.8%;position: relative;overflow-y: scroll" class="initial">
+        <div style="position: relative;border:5px solid #2b2b2b;border-left: 0;border-right: 0; border-bottom: 0;font-size: 48px;
+        text-align: center;vertical-align: center;height: 99.6%;width: 99.6%">
+            <div style="position: relative;border:5px solid #2b2b2b;font-size: 48px;
+        text-align: center;vertical-align: center;height: 99.6%;width: 99.6%">
                 <div id="list" style="width: 100%;height: 5%;position: fixed;">
-                    <input type="button" class="ui-button" value="全部" id="classify_-1">
+                    <input type="button" class="ui-button" style="height: 100%;width: 13%;text-align: center
+                    ;float: left" value="全部" id="classify_-1">
                 </div>
                 <br>
                 <div id="imageslist" style="width: 100%;height: auto;text-align: center">
@@ -48,7 +64,9 @@
                 classifyList = data;
                 var selectedObj = $("#list");
                 for(var i = 0; i < data.length; i++){
-                    selectedObj.append("<input  type='button' class='ui-button' value='" + data[i].classifyname + "' id='classify_" +
+                    selectedObj.append("<input  type='button' class='ui-button' " +
+                        "style='height: 100%;width: 13%;text-align: center;float: left' value='"
+                        + data[i].classifyname + "' id='classify_" +
                         data[i].classifyid + "'>");
                     $("#uploadclassify").append("<option value='" + data[i].classifyid + "'>" +
                         data[i].classifyname + "</option>");
