--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -9,6 +9,7 @@
     <link rel = "stylesheet" href = "./jQueryUI-1.13.2/jquery-ui.structure.min.css">
     <link rel = "stylesheet" href = "./jQueryUI-1.13.2/jquery-ui.theme.min.css">
     <script src="./jQueryUI-1.13.2/jquery-ui.min.js"></script>
+	<link rel="stylesheet" href="./css/background.css">
     <style>
         textarea{
             width: 80%;
@@ -32,7 +33,7 @@
     <div id="content" style="height: 89.2%;width: 99.6%;right: 0.2%;top: 6.8%;position: relative;overflow-y: scroll" class="initial">
         <div style="position: relative;border:5px solid #2b2b2b;border-left: 0;border-right: 0; border-bottom: 0;font-size: 48px;
         text-align: center;vertical-align: center;height: 99.6%;width: 99.6%">
-            <div id="list" style="width: 100%;height: 5%;position: fixed;">
+            <div id="list" style="width: 100%;height: 5%;position: fixed;overflow: hidden;overflow-y: scroll">
                 <input type="button" class="ui-button" style="height: 100%;width: 13%;text-align: center
                     ;float: left" value="答题" id="answer">
                 <input type="button" class="ui-button" style="height: 100%;width: 13%;text-align: center
