--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -60,7 +60,7 @@
             <input id="closeupload" type="button" class="ui-button" style="float: right;height: 36px;width: 10%;
                 background-color: #ccc"
                    value="关闭 X"><br>
-            <img id="showimage" style="width: auto;height: 80%;" src="" alt="请上传图片">
+            <img id="showimage" style="width: auto;height: 80%;display: none" src="" alt="请上传图片">
             <div id="path"></div>
         </div>
         <div id="todoanswer" style="position: fixed;width: 80%;height: 80%;top: 5%;left: 10%;border: 1px solid #000;z-index: 999;background-color: #FFF;display: none">
@@ -136,6 +136,10 @@
             reader.readAsDataURL(file[0]);
             reader.onload = function ()
             {
+                $("#showimage").show().css({
+                    "width": "100%",
+                    "height": "80%",
+				});
                 var image = document.getElementById("showimage");
                 image.src = reader.result;
             };
@@ -184,7 +188,7 @@
                     async: false,
                     success:function (data) {
                         alert("上传成功！等待管理员审核！");
-                        $("#showimage").attr("src", "");
+                        $("#showimage").attr("src", "").hide();
                         $("#path").text("");
                         $("#uponeimage").hide();
                     }
