--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -92,6 +92,7 @@
             localStorage.setItem("status", result['status']);
             alert(result['msg']);
             location.href ='/home.html';
+            location.reload();
         });
     });
     function avoidJump(){
