--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -33,15 +33,15 @@
     <div id="content" style="height: 89.2%;width: 99.6%;right: 0.2%;top: 6.8%;position: relative;overflow-y: scroll" class="initial">
         <div style="position: relative;border:5px solid #2b2b2b;border-left: 0;border-right: 0; border-bottom: 0;font-size: 48px;
         text-align: center;vertical-align: center;height: 99.6%;width: 99.6%">
-            <div id="list" style="width: 100%;height: 5%;position: fixed;overflow: hidden;overflow-y: scroll">
+            <div id="list" style="width: 100%;height: auto;position: relative;display: inline-block">
                 <input type="button" class="ui-button" style="height: 100%;width: 13%;text-align: center
                     ;float: left" value="答题" id="answer">
                 <input type="button" class="ui-button" style="height: 100%;width: 13%;text-align: center
                     ;float: left" value="上传" id="upload">
                 <input type="button" class="ui-button" style="height: 100%;width: 13%;text-align: center
-                    ;float: left" value="全部" id="classify_-1">
-                <input type="button" class="ui-button" style="height: 100%;width: 13%;text-align: center
                     ;float: left" value="通知" id="notice">
+				<input type="button" class="ui-button" style="height: 100%;width: 13%;text-align: center
+                    ;float: left" value="全部" id="classify_-1">
             </div>
             <br>
             <div id="imageslist" style="width: 100%;height: auto;text-align: center">
@@ -121,7 +121,8 @@
                     localStorage.removeItem("loginUser");
                     localStorage.removeItem("userid");
                     alert("退出登录成功！");
-                    location.href="index.html";
+                    location.href="./index.html";
+                    location.reload();
                 },
                 error: function (error) {}
             });
